# chatter

./: .gitignore  CMakeLists.txt  README.md
docs/: command_system.md  irc_connection_design.md  tui_design.md
include/: buffer.h  commands.h  globals.h  irc.h  log.h  tui.h  version.h
src/: CMakeLists.txt  buffer.c  commands.c  irc.c  log.c  main.c  tui.c  version.c
tests/: CMakeLists.txt
